k8s-scripts/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: my-app
spec:
  containers:
    - image: nginx:1.12
      name: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/
  volumes:
    - name: config
      configMap:
        name: my-configmap
