k8s-scripts/test-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web
  namespace: test-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
        - image: drskyfox/test-web:1.0.4
          imagePullPolicy: Always
          name: kbe-test-web-service
          resources:
            limits:
              cpu: "300m"
              memory: "500Mi"
          ports:
            - containerPort: 8080
