k8s-scripts/test-web-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: test-web-service
spec:
  selector:
    app: test-web-6dc9655948
  ports:
    - name: 8080-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
