k8s-scripts/test-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-testweb
  namespace: test-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cl2.skyfactory.fun
      secretName: cl2-sky
  rules:
    - host: cl2.skyfactory.fun
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-web
                port:
                  number: 8080

#    - host: echo1.example.com
#      http:
#        paths:
#          - backend:
#              service:
#                name: test-web
#                port:
#                  number: 80
